--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react": "^19.0.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
     "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^3.4.17",
     "tsparticles": "^3.7.1",
     "tsparticles-preset-stars": "^2.12.0"
   },
   "devDependencies": {
+    "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.5"
   }
