--- a/package.json
+++ b/package.json
@@ -10,17 +10,28 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-hover-card": "^1.1.4",
+        "@radix-ui/react-navigation-menu": "^1.2.3",
+        "@radix-ui/react-slot": "^1.1.1",
         "@types/react": "^19.0.2",
         "autoprefixer": "^10.4.20",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.469.0",
         "postcss": "^8.4.49",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-particles": "^2.12.2",
+        "react-router-dom": "^7.1.1",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss": "^3.4.17",
+        "tailwindcss-animate": "^1.0.7",
         "tsparticles": "^3.7.1",
         "tsparticles-preset-stars": "^2.12.0"
     },
     "devDependencies": {
+        "@types/node": "^22.10.2",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
         "sass": "^1.83.0",
