--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "lucide-react": "^0.469.0",
         "postcss": "^8.4.49",
         "react": "^18.3.1",
+        "react-animate-on-scroll": "^2.1.9",
         "react-dom": "^18.3.1",
         "react-particles": "^2.12.2",
         "react-router-dom": "^7.1.1",
@@ -32,6 +33,7 @@
     },
     "devDependencies": {
         "@types/node": "^22.10.2",
+        "@types/react-animate-on-scroll": "^2.1.8",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
         "sass": "^1.83.0",
