--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-hover-card": "^1.1.4",
         "@radix-ui/react-navigation-menu": "^1.2.3",
@@ -23,6 +28,7 @@
         "react": "^18.3.1",
         "react-animate-on-scroll": "^2.1.9",
         "react-dom": "^18.3.1",
+        "react-lazy-load-image-component": "^1.6.3",
         "react-particles": "^2.12.2",
         "react-router-dom": "^7.1.1",
         "tailwind-merge": "^2.6.0",
@@ -35,6 +41,7 @@
         "@types/node": "^22.10.2",
         "@types/react-animate-on-scroll": "^2.1.8",
         "@types/react-dom": "^19.0.2",
+        "@types/react-lazy-load-image-component": "^1.6.4",
         "@vitejs/plugin-react": "^4.3.4",
         "sass": "^1.83.0",
         "vite": "^6.0.5"
