--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "postcss": "^8.4.49",
         "react": "^18.3.1",
         "react-animate-on-scroll": "^2.1.9",
+        "react-countup": "^6.5.3",
         "react-dom": "^18.3.1",
         "react-lazy-load-image-component": "^1.6.3",
         "react-particles": "^2.12.2",
