--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
         "tsparticles": "^3.7.1",
-        "tsparticles-preset-stars": "^2.12.0"
+        "tsparticles-preset-stars": "^2.12.0",
+        "typewriter-effect": "^2.21.0"
     },
     "devDependencies": {
         "@types/node": "^22.10.2",
